fixed spacing

--- a/zad5b/styles.css
+++ b/zad5b/styles.css
@@ -7,7 +7,7 @@ div {
 .left-div{
   margin-top: -40px;
   float: left;
-  margin-right: 100px;
+  margin-right: 50px;
 }
 
 button{
